force-app/main/default/objects/Playbook__c/fields/completion_percentage__c.field-meta.xml
<CustomField>
    <fullName>completion_percentage__c</fullName>
    <formula>IF(
    Total_Sub_Tasks__c = 0,
    0,
    Total_Sub_Tasks_Completed__c / Total_Sub_Tasks__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completion %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>