force-app/main/default/objects/Playbook__c/fields/Playbook_Template__c.field-meta.xml
<CustomField>
    <fullName>Playbook_Template__c</fullName>
    <label>Playbook Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>