force-app/main/default/objects/Playbook__c/fields/Total_Sub_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Total_Sub_Tasks__c</fullName>
    <label>Total Sub Tasks</label>
    <summaryForeignKey>Sub_Task__c.Playbook__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>