force-app/main/default/objects/Playbook__c/fields/Total_Sub_Tasks_Completed__c.field-meta.xml
<CustomField>
    <fullName>Total_Sub_Tasks_Completed__c</fullName>
    <label>Total Sub Tasks Completed</label>
    <summaryFilterItems>
        <field>Sub_Task__c.completion_percentage__c</field>
        <operation>equals</operation>
        <value>100</value>
    </summaryFilterItems>
    <summaryForeignKey>Sub_Task__c.Playbook__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>